--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.Pertemuan6"
         tools:targetApi="31">
         <activity
+            android:name=".ProfilePengguna"
+            android:exported="false" />
+        <activity
+            android:name=".IntegrasiActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ConstraintLayout"
+            android:exported="false" />
+        <activity
+            android:name=".RelativeLayout"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
